--- a/views/css/front_1.7.css
+++ b/views/css/front_1.7.css
@@ -25,3 +25,49 @@
 * Don't forget to prefix your containers with your own identifier
 * to avoid any conflicts with others containers.
 */
+
+/* Hide Original Features view through CSS here or manually edit template */
+
+#pfc_table_header,
+#pfc_table_body {
+	text-align:center;
+	background-color: #e9e9e9;
+	color: #777;
+}
+
+#pfc_data_sheet_heading {
+	text-align: center;
+}
+
+#pfc_data_sheet_table {
+	width: 84%;
+	margin-left: 8%;
+}
+
+.pfc_name {
+	    -webkit-box-flex: 1;
+    box-flex: 1;
+    -moz-flex: 1 0 40%;
+    -ms-flex: 1 0 40%;
+    flex: 1 0 40%;
+    font-weight: 400;
+    background: #ebebeb;
+    padding: .625rem;
+    margin-right: .625rem;
+    min-height: 2.5rem;
+    word-break: break-all;
+}
+
+@media screen and (max-width: 1199px) and (min-width: 768px) {
+    #pfc_data_sheet_table {
+		width: 90%;
+		margin-left: 5%;
+	}
+}
+
+@media screen and (max-width: 767px) {
+    #pfc_data_sheet_table {
+		width: 100%;
+		margin-left: 0;
+	}
+}
